# NUEDC-Toolbox

./: README.md  Report _Template.docx
Test_Document/: AD637.md  AD8009.md  AD8099.md  ADA4817-1.md  AMC1301.md  HMC346MS8G.md  LTC6268-10.md  OPA695.md  Summary_of_op_amp.xlsx  芯片参数汇总.xlsx
drive/: .gitignore  CMakeLists.txt  arm-toolchain.cmake  testmain.cpp
drive/bridge/ftdi/: .gitignore  CMakeLists.txt  GPIOBridge.cpp  GPIOBridge.h  SPIBridge.cpp  SPIBridge.h
drive/bridge/ftdi/lib/: WinTypes.h  ftdi.h  ftdi_i.h  libMPSSE_spi.h  spline.h
drive/bridge/stm32/f1/: CMakeLists.txt  GPIOBridge.cpp  GPIOBridge.h  SPIBridge.cpp  SPIBridge.h
drive/bridge/stm32/f4/: CMakeLists.txt  GPIOBridge.cpp  SPIBridge.cpp  SPIBridge.h  stm32f4xx_hal_conf.h
drive/bridge/stm32/half1/: .gitignore  CMakeLists.txt  GPIOBridge.cpp  GPIOBridge.h  SPIBridge.cpp  SPIBridge.h  arm-toolchain.cmake  half1.ioc
drive/ftx232/: CMakeLists.txt  CMakeSettings.json  GPIOBridge.h  SPIBridge.cpp  SPIBridge.h  bridge.cpp  bridge.h  testmain.cpp
drive/ftx232/ad7606/inc/: AD7606Driver.h
drive/ftx232/ad7606/src/: AD7606Driver.cpp
drive/ftx232/ad9910/: CMakeLists.txt
drive/ftx232/ad9910/inc/: AD9910Driver.h
drive/ftx232/ad9910/src/: AD9910Driver.cpp
drive/ftx232/common/: CMakeLists.txt
drive/ftx232/common/inc/: FTD2xxBitMode.h  ftd4232driver.h
drive/ftx232/common/src/: FTD2xxBitMode.cpp  ftd4232driver.cpp
drive/ftx232/dac8563/inc/: DAC8563Driver.h
drive/ftx232/dac8563/src/: DAC8563Driver.cpp
drive/gio/: IAbstractGPIO.hpp  IAbstractSPI.h  IAbstractSPI.hpp
drive/module/ad7606/: AD7606Driver.hpp  CMakeLists.txt  testftdi.cpp
drive/module/ad7606/inc/: AD7606Driver.h
drive/module/ad7606/src/: AD7606Driver.cpp
drive/module/ad9910/: .gitignore  AD9910Driver.hpp  CMakeLists.txt  testftdi.cpp
drive/module/ad9910/inc/: AD9910Driver.h
drive/module/ad9910/src/: AD9910Driver.cpp
drive/module/ad9910/teststm32f1/: .gitignore  .mxproject  half1.ioc
drive/module/ad9959/: AD9959Driver.hpp  CMakeLists.txt
drive/module/dac8563/: CMakeLists.txt  DAC8563Driver.hpp
drive/module/dac8563/inc/: DAC8563Driver.h
drive/module/dac8563/src/: DAC8563Driver.cpp
drive/stm32/ad7606/: .gitignore  F103ZET6.ioc
drive/stm32/ad7606/Inc/: AD7606.h  main.h
drive/stm32/ad7606/Src/: AD7606.c  main.c  stm32f1xx_hal_msp.c  stm32f4xx_hal_msp.c
eval-boards/: collectlib.sh
eval-boards/ADA4522/: ADA4522-B_Cu.gbr  ADA4522-B_Mask.gbr  ADA4522-B_SilkS.gbr  ADA4522-Edge_Cuts.gbr  ADA4522-F_Cu.gbr  ADA4522-F_Mask.gbr  ADA4522-F_SilkS.gbr  ADA4522-NPTH.drl  ADA4522-PTH.drl  ADA4522.bak  ADA4522.kicad_pcb  ADA4522.kicad_pcb-bak  ADA4522.net  ADA4522.pro  ADA4522.sch
eval-boards/ADA4522-2/: ADA4522-B_Cu.gbr  ADA4522-B_Mask.gbr  ADA4522-B_SilkS.gbr  ADA4522-Edge_Cuts.gbr  ADA4522-F_Cu.gbr  ADA4522-F_Mask.gbr  ADA4522-F_SilkS.gbr  ADA4522-NPTH.drl  ADA4522-PTH.drl  ADA4522.kicad_pcb  ADA4522.kicad_pcb-bak  ADA4522.sch  ADA4522.xml  fp-info-cache
eval-boards/Altera_MAX10/: Altera_MAX10-cache.lib  Altera_MAX10.bak  Altera_MAX10.pro  fp-info-cache
eval-boards/Eval-AD8302/: Custom.dcm  Custom.lib  EvalAD8302-cache.lib  EvalAD8302.bak  EvalAD8302.kicad_pcb  EvalAD8302.kicad_pcb-bak  EvalAD8302.sch  fp-info-cache  fp-lib-table
eval-boards/Eval-AD8361/: sym-lib-table
eval-boards/Eval-ADA4522/: ADA4522-B_Cu.gbr  ADA4522-B_Mask.gbr  ADA4522-B_SilkS.gbr  ADA4522-Edge_Cuts.gbr  ADA4522-F_Cu.gbr  ADA4522-F_Mask.gbr  ADA4522-NPTH.drl  ADA4522-PTH.drl  ADA4522-cache.lib  ADA4522.bak  ADA4522.kicad_pcb  ADA4522.net  ADA4522.pro  ADA4522.xml  fp-info-cache
eval-boards/Eval-ADA4817/: eval-board-ADA4817-1-B_Cu.gbr  eval-board-ADA4817-1-B_Mask.gbr  eval-board-ADA4817-1-B_SilkS.gbr  eval-board-ADA4817-1-F_Cu.gbr  eval-board-ADA4817-1-F_Mask.gbr  eval-board-ADA4817-1-F_SilkS.gbr  eval-board-ADA4817-1-NPTH.drl  eval-board-ADA4817-1-PTH.drl  eval-board-ADA4817-1.bak  eval-board-ADA4817-1.kicad_pcb  eval-board-ADA4817-1.net  eval-board-ADA4817-1.sch  eval-board-ADA4817-1.xml
eval-boards/Eval-GP-Board/: ADA4522.bak  ADA4522.sch  General Purpose Op Amp Eval-Board-B_Cu.gbr  General Purpose Op Amp Eval-Board-B_Mask.gbr  General Purpose Op Amp Eval-Board-B_SilkS.gbr  General Purpose Op Amp Eval-Board-Edge_Cuts.gbr  General Purpose Op Amp Eval-Board-F_Cu.gbr  General Purpose Op Amp Eval-Board-F_Mask.gbr  General Purpose Op Amp Eval-Board-F_SilkS.gbr  General Purpose Op Amp Eval-Board-NPTH.drl  General Purpose Op Amp Eval-Board-PTH.drl  General Purpose Op Amp Eval-Board-cache.lib  General Purpose Op Amp Eval-Board.bak  General Purpose Op Amp Eval-Board.kicad_pcb  General Purpose Op Amp Eval-Board.kicad_pcb-bak  General Purpose Op Amp Eval-Board.net  General Purpose Op Amp Eval-Board.pro  High gain amplifier.bak  High gain amplifier.sch  Second order filtering.bak  Second order filtering.sch
eval-boards/Eval-GP-Board - updated/: General Purpose Op Amp Eval-Board-B_Cu.gbr  General Purpose Op Amp Eval-Board-B_Mask.gbr  General Purpose Op Amp Eval-Board-B_SilkS.gbr  General Purpose Op Amp Eval-Board-Edge_Cuts.gbr  General Purpose Op Amp Eval-Board-F_Cu.gbr  General Purpose Op Amp Eval-Board-PTH.drl  General Purpose Op Amp Eval-Board-cache.lib  General Purpose Op Amp Eval-Board.kicad_pcb  General Purpose Op Amp Eval-Board.kicad_pcb-bak  General Purpose Op Amp Eval-Board.pro  fp-info-cache
eval-boards/Eval-HF3/: HF3-cache.lib  HF3.bak  HF3.kicad_pcb  HF3.net  HF3.pro  HF3.sch  fp-info-cache  fp-lib-table  sym-lib-table
eval-boards/Eval-HMC346/: HMC346AMS8GE-B_Cu.gbr  HMC346AMS8GE-B_Mask.gbr  HMC346AMS8GE-B_SilkS.gbr  HMC346AMS8GE-Edge_Cuts.gbr  HMC346AMS8GE-F_Cu.gbr  HMC346AMS8GE-NPTH.drl  HMC346AMS8GE-PTH.drl  HMC346AMS8GE-cache.lib  HMC346AMS8GE.bak  HMC346AMS8GE.kicad_pcb-bak  HMC346AMS8GE.net  HMC346AMS8GE.pro  HMC346AMS8GE.sch  fp-info-cache
eval-boards/EvalADA4522/: ADA4522-B_Mask.gbr  ADA4522-Edge_Cuts.gbr  ADA4522-cache.lib
eval-boards/EvalADA4817/: eval-board-ADA4817-1-F_Mask.gbr
nuedcf4center/: .cproject  .gitignore  .mxproject  .project  STM32F429ZI_FLASH.ld  nuedcf4center.elf.launch  nuedcf4center.ioc
(+197 files in other folders)
